petname (2.5) unreleased; urgency=medium

  * === added directory icons, icons/icon.png, icons/petname_14.png,
    icons/petname_192.png, icons/petname_64.png, usr/bin/petname:
    - added an icon (a dog tag)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 09 Aug 2016 14:03:14 -0500

petname (2.4-0ubuntu1) yakkety; urgency=medium

  * === added directory usr/share/petname/medium, === added symlink
    usr/share/petname/adjectives.txt, === added symlink
    usr/share/petname/adverbs.txt, === added symlink
    usr/share/petname/names.txt, debian/rules, debian/tests/check_words,
    === renamed directory usr/share/petname/complex =>
    usr/share/petname/large, === renamed directory
    usr/share/petname/easy => usr/share/petname/small, === target is
    usmall/adjectives.txt, === target is usmall/adverbs.txt, === target
    is usmall/names.txt, usr/bin/petname, usr/share/man/man1/petname.1,
    usr/share/petname/adjectives.txt =>
    usr/share/petname/medium/adjectives.txt,
    usr/share/petname/adverbs.txt =>
    usr/share/petname/medium/adverbs.txt, usr/share/petname/names.txt =>
    usr/share/petname/medium/names.txt:
    - default to our simplest word-base, which gives ~205K adjective-animal
      combinations, which are memorable, by default
  * debian/rules, debian/tests/check_words:
    - test updates

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 09 Aug 2016 14:03:12 -0500

petname (2.3-0ubuntu1) yakkety; urgency=medium

  * debian/tests/check_words:
    - bypass the dict(1) tests when building in the buildd

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Aug 2016 22:13:36 -0500

petname (2.2-0ubuntu1) yakkety; urgency=medium

  * debian/control:
    - add a couple of ispell build-deps, to fix broken build

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 08 Aug 2016 21:37:06 -0500

petname (2.1-0ubuntu1) yakkety; urgency=medium

  * debian/blacklist.txt, debian/tests/check_words,
    usr/share/petname/names.txt: